<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_location_on_black_24dp"
            android:title="@string/title_dashboard" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_info_black_24dp"
            android:title="@string/title_notifications" />
    </group>

    <group android:id="@+id/icon_group"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_seen_finds"
            android:icon="@drawable/ic_terrain_black_24dp"
            android:title="Разгледани" />
        <item
            android:id="@+id/nav_scanner"
            android:icon="@drawable/ic_filter_center_focus_black_24dp"
            android:title="QR код скенер" />
    </group>
</menu>
