<?xml version="1.0" encoding="utf-8"?>
<!-- TODO: Update blank fragment layout -->
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="UselessParent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_about_us"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                card_view:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about_us"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_marginTop="11dp"
                        android:text="@string/about_us"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/about_us_definition" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">


                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_project_partners"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                card_view:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/about_project"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_marginTop="11dp"
                        android:gravity="center"
                        android:text="@string/about_the_project"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/about_the_project_definition" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_project"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                card_view:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/what_is_our_project"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center|top"
                        android:layout_marginTop="11dp"
                        android:gravity="center"
                        android:text="@string/what_is_our_project"
                        android:textSize="30sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="25dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginEnd="25dp"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"
                        android:text="@string/project_definition" />


                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_images"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                card_view:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:contentDescription="@string/content_description_image"
                        android:src="@drawable/rim_pernik_logo_horizontal"
                        tools:src="@drawable/rim_pernik_logo_horizontal" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_marginBottom="20dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/content_description_image"
                            android:src="@drawable/pernik_logo"
                            tools:src="@drawable/pernik_logo" />

                        <ImageView
                            android:layout_width="0dp"
                            android:layout_height="100dp"
                            android:layout_marginBottom="20dp"
                            android:layout_weight="1"
                            android:contentDescription="@string/content_description_image"
                            android:src="@drawable/pgi_logo"
                            tools:src="@drawable/pgi_logo" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

</FrameLayout>